--- a/index.html
+++ b/index.html
@@ -121,6 +121,79 @@
                 <button class="button" type="button">Join Community</button>
             </div>
         </header>
+        <div class="wrap">
+            <div class="items-wrap">
+              <div class="items marquee">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+              </div>
+              <div aria-hidden="true" class="items marquee">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+              </div>
+            </div>
+          </div>
+        <section class="how_it_works mobile_opened">
+            <div class="how_it_works_wrapper">
+
+
+                <div class="partners_icons">
+                    <div class="partners_icons_item partners_icons_item1">
+                        <img width="100%" src="img/Partners/1.svg" alt="">
+                    </div>
+                    <div class="partners_icons_item partners_icons_item2">
+                        <img width="100%" src="img/Partners/2.png" alt="">
+                    </div>
+                    <div class="partners_icons_item partners_icons_item3">
+                        <img width="100%" src="img/Partners/3.png" alt="">
+                    </div>
+                    <div class="partners_icons_item partners_icons_item4">
+                        <img width="100%" src="img/Partners/4.png" alt="">
+                    </div>
+                    <div class="partners_icons_item partners_icons_item5">
+                        <img width="100%" src="img/Partners/5.png" alt="">
+                    </div>
+                    <div class="partners_icons_item partners_icons_item6">
+                        <img width="100%" src="img/Partners/6.png" alt="">
+                    </div>
+                </div>
+
+                <div class="how_it_works_info">
+                    <h3>Yes you read that right, SpiderShib Inu officially enters the game to conquer the world 🌎</h3>
+                    <img class="cat_img_earth" src="img/2_section/cat.png" alt="">
+                    <div class="header_info_col_buttons">
+                        <button class="reb_btn">Let’s find out more</button>
+                    </div>
+                </div>
+                <img class="img_absolute img_red" src="img/2_section/red.png" alt="">
+                <img class="img_absolute img_blue" src="img/2_section/blue.png" alt="">
+                <img class="img_absolute img_gold" src="img/2_section/gold.png" alt="">
+                <!-- <div class="section_title">How it works?</div> -->
+
+            </div>
+        </section>
+        <section class="services">
+            <div class="section_title">
+                How it works?
+            </div>
+        </section>
+        
     </div>
 
 
