--- a/index.html
+++ b/index.html
@@ -228,7 +228,45 @@
             </div>
 
         </section>
+        <section class="play mobile_opened">
+            <div class="section_title">Play to earn</div>
+            <div class="section_subtitle">Many ways to earn tokens and NFTs</div>
+            <div class="play_wrapper">
+                <div class="play_wrapper_col1">
+                    <div class="play_wrapper_col1_item">
+                        <img src="img/3_section/1.png" alt="">
+                    </div>
+                    <div class="play_wrapper_col1_item2">
+                        <div class="play_wrapper_col1_item_title">Game plot and goal</div>
+                        <div class="play_wrapper_col1_item2_text">Mary Jane has been kidnapped by Green Goblin, who has no intention of letting her escape, so she flees to New York City, going through different scenarios that will be part of the game!</div>
+                        <div class="play_wrapper_col1_item2_text play_wrapper_col1_item2_text_middle">The goal is to accumulate as many game coins and points as possible, which will then be transformed into the game token based also on the attempts used to complete the level.</div>
+                        <div class="play_wrapper_col1_item2_text">Once the Green Goblin is defeated and Mary Jane is safed, the game is over, but we don't stop there!</div>
+                    </div>
+                </div>
+                <div class="play_wrapper_col2">
+                    <div class="play_wrapper_col2_item play_wrapper_col2_item1">
+                        <div class="play_wrapper_col2_item_img">
+                            <img src="img/3_section/2.png" alt="">
+                        </div>
 
+                        <div class="play_wrapper_col2_item2_info">
+                        <div class="play_wrapper_col1_item_title">Earn that cash!</div>
+                        <div class="play_wrapper_col2_item2_info_text">In the various levels there will also be special coins, more difficult to take, which will provide you with bonuses in tokens or game NFTs!</div>
+                        </div>
+                    </div>
+                    <div class="play_wrapper_col2_item play_wrapper_col2_item2">
+                        <div class="play_wrapper_col2_item_img">
+                            <img src="img/3_section/3.png" alt="">
+                        </div>
+
+                        <div class="play_wrapper_col2_item2_info">
+                        <div class="play_wrapper_col1_item_title">Game events and challenges</div>
+                            <div class="play_wrapper_col2_item2_info_text">There will be lots of events after end of the game, that will bring together whole community and you can participate in challanges with the NFTs!</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
 
