--- a/index.html
+++ b/index.html
@@ -22,8 +22,28 @@
 </head>
 
 <body>
+    <div class="preloader">
+        <div class="div_sircle load_cat">
+            <img src="img/middile_cat.png" alt="">
+        </div>
+        <div class="div_sircle load_1">
+            <img src="img/1.png" alt="">
+        </div>
+        <div class="div_sircle load_2">
+            <img src="img/2.png" alt="">
 
+        </div>
+        <div class="div_sircle load_3">
+            <img src="img/3.png" alt="">
+
+        </div>
+
+        <div class="logo_wrapper">
+            <h4 class="logo_title">SpiderShiba <span>Inu</span></h4>
+        </div>
+    </div>
     <div class="body_container">
+
         <header>
             <div class="header_wrapper mobile_opened">
                 <nav>
@@ -121,7 +141,7 @@
                 <button class="button" type="button">Join Community</button>
             </div>
         </header>
-        <div class="wrap">
+        <div class="wrap mobile_opened">
             <div class="items-wrap">
                 <div class="items marquee">
                     <div class="item"></div>
@@ -197,8 +217,10 @@
                     </div>
                     <div class="card_item_title">SpiderShib Inu Ecosystem</div>
                     <div class="card_item_subtitle">Large variety of options to use SpiderShib Inu tokens and NFTs</div>
-                    <div class="card_item_text card_item_text1">Our ecosystem is different from all the others, we have created the first REAL nft game with SpiderShib Inu.</div>
-                    <div class="card_item_text">So the tokens will have real usefulness and to ensure constant growth for all holders.</div>
+                    <div class="card_item_text card_item_text1">Our ecosystem is different from all the others, we have
+                        created the first REAL nft game with SpiderShib Inu.</div>
+                    <div class="card_item_text">So the tokens will have real usefulness and to ensure constant growth
+                        for all holders.</div>
                 </div>
 
                 <div class="services_cards_item">
@@ -206,11 +228,12 @@
                         <img src="img/2_section/2.png" alt="">
                     </div>
                     <div class="card_item_title">Many options to earn</div>
-                    <div class="card_item_subtitle">Thanks to our ecosystem you will be able to earn passively and actively</div>
+                    <div class="card_item_subtitle">Thanks to our ecosystem you will be able to earn passively and
+                        actively</div>
                     <div class="card_item_text card_item_text1">The passive income: <br>
                         - staking<br>
                         - the appreciation of the staked currency
-                        </div>
+                    </div>
                     <div class="card_item_text">The active income: <br>
                         - Gaming process (you will earn money that you can turn into tokens)<br>
                         - Re-sale of the NFTs</div>
@@ -221,8 +244,10 @@
                         <img src="img/2_section/3.png" alt="">
                     </div>
                     <div class="card_item_title">Reshaping DeFi</div>
-                    <div class="card_item_subtitle">We are evolving DeFi concepts such as participation rewards, NFTs and tokenomics to maximise profit for every investor</div>
-                    <div class="card_item_text card_item_text3">We offer huge tools for people around the world to take control of their financial future.</div>
+                    <div class="card_item_subtitle">We are evolving DeFi concepts such as participation rewards, NFTs
+                        and tokenomics to maximise profit for every investor</div>
+                    <div class="card_item_text card_item_text3">We offer huge tools for people around the world to take
+                        control of their financial future.</div>
 
                 </div>
             </div>
@@ -238,9 +263,14 @@
                     </div>
                     <div class="play_wrapper_col1_item2">
                         <div class="play_wrapper_col1_item_title">Game plot and goal</div>
-                        <div class="play_wrapper_col1_item2_text">Mary Jane has been kidnapped by Green Goblin, who has no intention of letting her escape, so she flees to New York City, going through different scenarios that will be part of the game!</div>
-                        <div class="play_wrapper_col1_item2_text play_wrapper_col1_item2_text_middle">The goal is to accumulate as many game coins and points as possible, which will then be transformed into the game token based also on the attempts used to complete the level.</div>
-                        <div class="play_wrapper_col1_item2_text">Once the Green Goblin is defeated and Mary Jane is safed, the game is over, but we don't stop there!</div>
+                        <div class="play_wrapper_col1_item2_text">Mary Jane has been kidnapped by Green Goblin, who has
+                            no intention of letting her escape, so she flees to New York City, going through different
+                            scenarios that will be part of the game!</div>
+                        <div class="play_wrapper_col1_item2_text play_wrapper_col1_item2_text_middle">The goal is to
+                            accumulate as many game coins and points as possible, which will then be transformed into
+                            the game token based also on the attempts used to complete the level.</div>
+                        <div class="play_wrapper_col1_item2_text">Once the Green Goblin is defeated and Mary Jane is
+                            safed, the game is over, but we don't stop there!</div>
                     </div>
                 </div>
                 <div class="play_wrapper_col2">
@@ -250,8 +280,10 @@
                         </div>
 
                         <div class="play_wrapper_col2_item2_info">
-                        <div class="play_wrapper_col1_item_title">Earn that cash!</div>
-                        <div class="play_wrapper_col2_item2_info_text">In the various levels there will also be special coins, more difficult to take, which will provide you with bonuses in tokens or game NFTs!</div>
+                            <div class="play_wrapper_col1_item_title">Earn that cash!</div>
+                            <div class="play_wrapper_col2_item2_info_text">In the various levels there will also be
+                                special coins, more difficult to take, which will provide you with bonuses in tokens or
+                                game NFTs!</div>
                         </div>
                     </div>
                     <div class="play_wrapper_col2_item play_wrapper_col2_item2">
@@ -260,8 +292,10 @@
                         </div>
 
                         <div class="play_wrapper_col2_item2_info">
-                        <div class="play_wrapper_col1_item_title">Game events and challenges</div>
-                            <div class="play_wrapper_col2_item2_info_text">There will be lots of events after end of the game, that will bring together whole community and you can participate in challanges with the NFTs!</div>
+                            <div class="play_wrapper_col1_item_title">Game events and challenges</div>
+                            <div class="play_wrapper_col2_item2_info_text">There will be lots of events after end of the
+                                game, that will bring together whole community and you can participate in challanges
+                                with the NFTs!</div>
                         </div>
                     </div>
                 </div>
