--- a/index.html
+++ b/index.html
@@ -23,24 +23,31 @@
 
 <body>
     <div class="preloader">
-        <div class="div_sircle load_cat">
-            <img src="img/middile_cat.png" alt="">
-        </div>
-        <div class="div_sircle load_1">
-            <img src="img/1.png" alt="">
-        </div>
-        <div class="div_sircle load_2">
-            <img src="img/2.png" alt="">
+        <div class="preloader_wrapper">
+
+            <div class="div_sircle load_cat">
+                <img src="img/middile_cat.png" alt="">
+            </div>
+
+            <div class="div_sircle load_1">
+                <img src="img/1.png" alt="">
+            </div>
+
+            <div class="div_sircle load_2">
+                <img src="img/2.png" alt="">
+            </div>
+
+            <div class="div_sircle load_3">
+                <img src="img/3.png" alt="">
+            </div>
+
+            <div class="logo_wrapper div_sircle">
+                <h4 class="logo_title">SpiderShiba <span>Inu</span></h4>
+            </div>
+
 
         </div>
-        <div class="div_sircle load_3">
-            <img src="img/3.png" alt="">
 
-        </div>
-
-        <div class="logo_wrapper">
-            <h4 class="logo_title">SpiderShiba <span>Inu</span></h4>
-        </div>
     </div>
     <div class="body_container">
 
@@ -296,6 +303,47 @@
                             <div class="play_wrapper_col2_item2_info_text">There will be lots of events after end of the
                                 game, that will bring together whole community and you can participate in challanges
                                 with the NFTs!</div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </section>
+
+        <section class="trend mobile_opened">
+            <div class="play_wrapper_col3">
+                <div class="play_wrapper_col3_item play_wrapper_col3_item1">
+                    <div class="play_wrapper_col3_item1_title">Why invest in SpiderShiba Inu?</div>
+                    <div class="play_wrapper_col3_item1_subtitle">in case you have lived in a cave in the last few
+                        months we will give you a brief summary of what happened in crypto industry</div>
+                    <div class="header_info_col_buttons">
+                        <button class="reb_btn">Learn more about SpiderShiba</button>
+                    </div>
+                </div>
+                <div class="play_wrapper_col3_item play_wrapper_col3_item2">
+                    <div class="play_wrapper_col3_item2_subitem">
+                        <div class="play_wrapper_col3_item2_subitem_img">
+                            <img src="img/3_section/4.png" alt="">
+                        </div>
+                        <div class="play_wrapper_col3_item2_subitem_info">
+                            <div class="play_wrapper_col3_item2_subitem_title">Massive trend</div>
+                            <div class="play_wrapper_col3_item2_subitem_text">Shiba inu has invaded the market with an
+                                infinity of other meme coins that collect thousands of BNB and after the launch they
+                                make mind-boggling numbers! </div>
+                        </div>
+                    </div>
+
+                    <div class="play_wrapper_col3_item2_subitem play_wrapper_col3_item2_subitem2">
+                        <div class="play_wrapper_col3_item2_subitem_img">
+                            <img src="img/3_section/star1.png" alt="">
+                        </div>
+                        <div class="play_wrapper_col3_item2_subitem_info">
+                            <div class="play_wrapper_col3_item2_subitem_title">100% of value, 0% of memecoin!</div>
+                            <div class="play_wrapper_col3_item2_subitem_text">We took the best from this trend and have
+                                decided to ride this tremendous wave success in Shiba Inu tokens, not only by launching
+                                a coin, but by creating a real NFT game p2e</div>
                         </div>
                     </div>
                 </div>
