Уменьшил скорость прокрутки бегущего текста

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                     </div>
                     <div class="desktop_menu">
                         <div class="links">
-                            <a href="#">How it works</a>
-                            <a href="#">Play and earn</a>
-                            <a href="#">Roadmap</a>
-                            <a href="#">Team</a>
-                            <a href="#">Partners&Investors</a>
-                            <a href="#">Why invest in SpiderShiba</a>
-                            <a href="#">Tokenomics</a>
-                            <a href="#">FAQ</a>
-                            <a href="#">Community</a>
+                            <a class="menu_link" href="#how_it_works">How it works</a>
+                            <a class="menu_link" href="#play_and_earn">Play and earn</a>
+                            <a class="menu_link" href="#roadmap">Roadmap</a>
+                            <a class="menu_link" href="#team">Team</a>
+                            <a class="menu_link" href="#partners">Partners&Investors</a>
+                            <a class="menu_link" href="#why_invest">Why invest in SpiderShiba</a>
+                            <a class="menu_link" href="#tokenomics">Tokenomics</a>
+                            <a class="menu_link" href="#faq">FAQ</a>
+                            <a class="menu_link" href="#community">Community</a>
                         </div>
                         <button class="button" type="button">Join Community</button>
                     </div>
@@ -135,15 +135,15 @@
 
                 </nav>
                 <div class="links">
-                    <a href="#">How it works</a>
-                    <a href="#">Play and earn</a>
-                    <a href="#">Roadmap</a>
-                    <a href="#">Team</a>
-                    <a href="#">Partners&Investors</a>
-                    <a href="#">Why invest in SpiderShiba</a>
-                    <a href="#">Tokenomics</a>
-                    <a href="#">FAQ</a>
-                    <a href="#">Community</a>
+                    <a class="menu_link" href="#how_it_works">How it works</a>
+                    <a class="menu_link" href="#play_and_earn">Play and earn</a>
+                    <a class="menu_link" href="#roadmap">Roadmap</a>
+                    <a class="menu_link" href="#team">Team</a>
+                    <a class="menu_link" href="#partners">Partners&Investors</a>
+                    <a class="menu_link" href="#why_invest">Why invest in SpiderShiba</a>
+                    <a class="menu_link" href="#tokenomics">Tokenomics</a>
+                    <a class="menu_link" href="#faq">FAQ</a>
+                    <a class="menu_link" href="#community">Community</a>
                 </div>
                 <button class="button" type="button">Join Community</button>
             </div>
@@ -215,7 +215,7 @@
 
             </div>
         </section>
-        <section class="services mobile_opened">
+        <section id="how_it_works" class="services mobile_opened">
             <div class="section_title">How it works?</div>
             <div class="services_cards">
                 <div class="services_cards_item">
@@ -260,7 +260,7 @@
             </div>
 
         </section>
-        <section class="play mobile_opened">
+        <section class="play mobile_opened" id="play_and_earn">
             <div class="section_title">Play to earn</div>
             <div class="section_subtitle">Many ways to earn tokens and NFTs</div>
             <div class="play_wrapper">
