--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </div>
     <div class="body_container">
 
-        <header>
-            <div class="header_wrapper mobile_opened">
+        <header >
+            <div class="header_wrapper mobile_opened  element-animation">
                 <nav>
                     <div class="logo_wrapper">
                         <div class="logo_img">
@@ -62,19 +62,19 @@
                     </div>
                     <div class="desktop_menu">
                         <div class="links">
-                            <a class="menu_link" href="#how_it_works">How it works</a>
-                            <a class="menu_link" href="#play_and_earn">Play and earn</a>
-                            <a class="menu_link" href="#roadmap">Roadmap</a>
-                            <a class="menu_link" href="#team">Team</a>
-                            <a class="menu_link" href="#partners">Partners&Investors</a>
-                            <a class="menu_link" href="#why_invest">Why invest in SpiderShiba</a>
-                            <a class="menu_link" href="#tokenomics">Tokenomics</a>
-                            <a class="menu_link" href="#faq">FAQ</a>
-                            <a class="menu_link" href="#community">Community</a>
+                            <a class="menu_link " id="menu_link" href="#how_it_works">How it works</a>
+                            <a class="menu_link" id="menu_link1" href="#play_and_earn">Play and earn</a>
+                            <a class="menu_link" id="menu_link2" href="#roadmap">Roadmap</a>
+                            <a class="menu_link" id="menu_link3" href="#team">Team</a>
+                            <a class="menu_link" id="menu_link4" href="#partners">Partners&Investors</a>
+                            <a class="menu_link" id="menu_link5" href="#why_invest">Why invest in SpiderShiba</a>
+                            <a class="menu_link" id="menu_link6" href="#tokenomics">Tokenomics</a>
+                            <a class="menu_link" id="menu_link7" href="#faq">FAQ</a>
+                            <a class="menu_link" id="menu_link8" href="#community">Community</a>
                         </div>
                         <button class="button" type="button">Join Community</button>
                     </div>
-                    <div class="mobile_menu">
+                    <div class="mobile_menu menu_link">
                         <span class="span_1"></span>
                         <span class="span_2"></span>
                         <span class="span_3"></span>
@@ -82,12 +82,12 @@
 
                 </nav>
             </div>
-            <div class="header_info_container mobile_opened">
-                <div class="header_info_wrapper">
+            <div class="header_info_container mobile_opened ">
+                <div class="header_info_wrapper ">
                     <div class="header_info_col header_info_col1">
-                        <h1><span>Who is</span> mr. Spidershiba Inu?</h1>
-                        <div class="header_info_col_subtitle">it’s a hybrid of Shiba and Spiderman.... but </div>
-                        <div class="header_info_col_text">It’s not only for pump and dump by Elon tweets.
+                        <h1 class=" element-animation"><span>Who is</span> mr. Spidershiba Inu?</h1>
+                        <div class="header_info_col_subtitle  element-animation">it’s a hybrid of Shiba and Spiderman.... but </div>
+                        <div class="header_info_col_text  element-animation">It’s not only for pump and dump by Elon tweets.
                             This is real NFT game with Achiements, Goals and nice gameplay with tokenization</div>
                         <div class="desktop_btns">
                             <div class="header_info_col_buttons">
@@ -101,15 +101,15 @@
                         </div>
                     </div>
 
-                    <div class="header_info_col header_info_col2">
+                    <div class="header_info_col header_info_col2  element-animation">
                         <img src="img/Header/spider_cat.png" alt="">
                     </div>
-                    <div class="mobile_btns">
+                    <div class="mobile_btns  element-animation">
                         <div class="header_info_col_buttons">
                             <button class="reb_btn">Join Community</button>
                             <button class="black_btn">More about SpiderShiba Inu</button>
                         </div>
-                        <div class="hach_wrapper">
+                        <div class="hach_wrapper  element-animation">
                             <div class="header_info_col_code">
                                 <div class="header_info_col_code_title">Contract address:</div>
                                 <div class="header_info_col_code_hash">0xe4C6E7a0F696Fb2356A187020eb13E742792Fdcc</div>
@@ -120,14 +120,14 @@
             </div>
             <div class="mobile_menu_wrapper">
                 <nav>
-                    <div class="logo_wrapper">
+                    <div class="logo_wrapper menu_link">
                         <div class="logo_img">
                             <img src="img/Header/logo.png" alt="">
                         </div>
                         <h4 class="logo_title">SpiderShiba <span>Inu</span></h4>
                     </div>
 
-                    <div class="mobile_menu closeMenu">
+                    <div class="mobile_menu closeMenu menu_link">
                         <span class="span_1"></span>
                         <span class="span_2"></span>
                         <span class="span_3"></span>
@@ -135,20 +135,20 @@
 
                 </nav>
                 <div class="links">
-                    <a class="menu_link" href="#how_it_works">How it works</a>
-                    <a class="menu_link" href="#play_and_earn">Play and earn</a>
-                    <a class="menu_link" href="#roadmap">Roadmap</a>
-                    <a class="menu_link" href="#team">Team</a>
-                    <a class="menu_link" href="#partners">Partners&Investors</a>
-                    <a class="menu_link" href="#why_invest">Why invest in SpiderShiba</a>
-                    <a class="menu_link" href="#tokenomics">Tokenomics</a>
-                    <a class="menu_link" href="#faq">FAQ</a>
-                    <a class="menu_link" href="#community">Community</a>
+                    <a class="menu_link " id="menu_link" href="#how_it_works">How it works</a>
+                    <a class="menu_link" id="menu_link1" href="#play_and_earn">Play and earn</a>
+                    <a class="menu_link" id="menu_link2" href="#roadmap">Roadmap</a>
+                    <a class="menu_link" id="menu_link3" href="#team">Team</a>
+                    <a class="menu_link" id="menu_link4" href="#partners">Partners&Investors</a>
+                    <a class="menu_link" id="menu_link5" href="#why_invest">Why invest in SpiderShiba</a>
+                    <a class="menu_link" id="menu_link6" href="#tokenomics">Tokenomics</a>
+                    <a class="menu_link" id="menu_link7" href="#faq">FAQ</a>
+                    <a class="menu_link" id="menu_link8" href="#community">Community</a>
                 </div>
                 <button class="button" type="button">Join Community</button>
             </div>
         </header>
-        <div class="wrap mobile_opened">
+        <div class="wrap mobile_opened ">
             <div class="items-wrap">
                 <div class="items marquee">
                     <div class="item"></div>
@@ -176,8 +176,8 @@
                 </div>
             </div>
         </div>
-        <section class="how_it_works mobile_opened">
-            <div class="how_it_works_wrapper">
+        <section class="how_it_works mobile_opened ">
+            <div class="how_it_works_wrapper  element-animation">
 
 
                 <div class="partners_icons">
@@ -202,22 +202,22 @@
                 </div>
 
                 <div class="how_it_works_info">
-                    <h3>Yes you read that right, SpiderShib Inu officially enters the game to conquer the world 🌎</h3>
-                    <img class="cat_img_earth" src="img/2_section/cat.png" alt="">
-                    <div class="header_info_col_buttons">
+                    <h3 class="  element-animation">Yes you read that right, SpiderShib Inu officially enters the game to conquer the world 🌎</h3>
+                    <img class="cat_img_earth   element-animation" src="img/2_section/cat.png" alt="">
+                    <div class="header_info_col_buttons   element-animation">
                         <button class="reb_btn">Let’s find out more</button>
                     </div>
                 </div>
-                <img class="img_absolute img_red" src="img/2_section/red.png" alt="">
-                <img class="img_absolute img_blue" src="img/2_section/blue.png" alt="">
-                <img class="img_absolute img_gold" src="img/2_section/gold.png" alt="">
+                <img class="img_absolute img_red  element-animation" src="img/2_section/red.png" alt="">
+                <img class="img_absolute img_blue  element-animation" src="img/2_section/blue.png" alt="">
+                <img class="img_absolute img_gold  element-animation" src="img/2_section/gold.png" alt="">
                 <!-- <div class="section_title">How it works?</div> -->
 
             </div>
         </section>
         <section id="how_it_works" class="services mobile_opened">
-            <div class="section_title">How it works?</div>
-            <div class="services_cards">
+            <div class="section_title  element-animation">How it works?</div>
+            <div class="services_cards  element-animation">
                 <div class="services_cards_item">
                     <div class="card_item_img">
                         <img src="img/2_section/1.png" alt="">
@@ -268,7 +268,7 @@
                     <div class="play_wrapper_col1_item">
                         <img src="img/3_section/1.png" alt="">
                     </div>
-                    <div class="play_wrapper_col1_item2">
+                    <div class="play_wrapper_col1_item2  element-animation">
                         <div class="play_wrapper_col1_item_title">Game plot and goal</div>
                         <div class="play_wrapper_col1_item2_text">Mary Jane has been kidnapped by Green Goblin, who has
                             no intention of letting her escape, so she flees to New York City, going through different
@@ -280,7 +280,7 @@
                             safed, the game is over, but we don't stop there!</div>
                     </div>
                 </div>
-                <div class="play_wrapper_col2">
+                <div class="play_wrapper_col2  element-animation">
                     <div class="play_wrapper_col2_item play_wrapper_col2_item1">
                         <div class="play_wrapper_col2_item_img">
                             <img src="img/3_section/2.png" alt="">
@@ -313,7 +313,7 @@
         </section>
 
         <section class="trend mobile_opened">
-            <div class="play_wrapper_col3">
+            <div class="play_wrapper_col3  element-animation">
                 <div class="play_wrapper_col3_item play_wrapper_col3_item1">
                     <div class="play_wrapper_col3_item1_title">Why invest in SpiderShiba Inu?</div>
                     <div class="play_wrapper_col3_item1_subtitle">in case you have lived in a cave in the last few
